--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "circuit-fuses": "^2.0.0",
     "github": "^2.4.1",
+    "node-cache": "^4.1.0",
     "screwdriver-data-schema": "^12.0.0",
     "screwdriver-scm-base": "^1.0.0"
   }
